--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <!-- link de fuentes  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;900&display=swap" rel="stylesheet">
 
     <!-- Links Css -->
     <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/footer.css">
 
     <title>Francisco E.</title>
 
@@ -42,6 +42,7 @@
         </nav>
     </div>
     </div>
+
     <!-- Barra menu de contactos -->
     <div class="contac">
         <div class="line1"></div>
@@ -76,6 +77,9 @@
         <div class="line2"></div>
     </div>
 
+</head>
+<body>
+    <!-- Texto principal -->
     <div class="text">
         <h1> <strong>¡Buenas!</strong> </h1>
         <p>
@@ -89,10 +93,12 @@
         </p>
     </div>
 
+    <!-- Foto principal -->
     <div class="foto">
         <img src="img/foto.png" alt="">
     </div>
 
+    <!-- Carta destrezas -->
     <div class="card1">
         <div class="titel">
             <h1>
@@ -121,6 +127,8 @@
         </div>
     </div>
 
+
+    <!-- Carta idiomas -->
     <div class="card2">
         <div class="titel">
             <h1>
@@ -148,10 +156,128 @@
         </div>
     </div>
 
-    
+    <!-- Carta Intereses -->
+    <div class="card3">
+        <div class="titel">
+            <h1>
+                Intereses
+            </h1>
+        </div>
 
-</head>
-<body>
+        <div class="hline"></div>
+
+        <div class="grid2">
+            <div>
+                <p>
+                    <img src="img/deportes.png" alt="">
+                    Deportes
+                </p>
+            </div>
+
+            <div>
+                <p>
+                    <img src="img/viedojuegos.png" alt="">
+                    Video Juegos
+                </p>
+            </div>
+
+            <div>
+                <p>
+                    <img src="img/tecnologia.png" alt="">
+                    Tecnología
+                </p>
+            </div>
+
+            <div>
+                <p>
+                    <img src="img/peliculas.png" alt="">
+                    Peliculas
+                </p>
+            </div>
+
+            <div>
+                <p>
+                    <img src="img/programacion.png" alt="">
+                    Programación
+                </p>
+            </div>
+
+            <div>
+                <p>
+                    <img src="img/aprender.png" alt="">
+                    Aprender 
+                </p>
+            </div>
+        </div>
+
+            <!-- Carta Intereses -->
+    <div class="card4">
+        <div class="titel">
+            <h1>
+                Portafolios
+            </h1>
+        </div>
+
+        <div class="hline"></div>
+
+        <div class="porta">
+            <div class="boton">
+                <a href="https://www.behance.net/francisestupi" target="_blank">Diseño Industrial</a>
+            </div>
     
-</body>
+            <div class="boton">
+                <a href="https://github.com/festupinans" target="_blank">Desarrollo Web y Móvil</a>
+            </div>
+        </div>
+
+    </div>
+</body>     
+
+<!-- <footer>
+    <div class="footer">
+        <div class="imgF">
+            <img src="img/logoblanco.png" alt="">
+        </div>
+
+        <div class="liF">
+            <div>
+                <ul>
+                    <li>Acerca de mí</li>
+                    <li>Buenas</li>
+                    <li>Destrezas</li>
+                    <li>Idiomas</li>
+                    <li>Intereses</li>
+                </ul>
+            </div>
+
+            <div>
+                <ul>
+                    <il>Contacto</il>
+                    <il>Behance</il>
+                    <il>Instagram</il>
+                    <il>Linkedin</il>
+                    <il>Github</il>
+                </ul>
+            </div>
+
+            <div>
+                <ul>
+                    <li>Yo como diseñador industrial</li>
+                    <li>Manifiesto de diseño</li>
+                    <li>Habilidades</li>
+                    <li>Portafolio</li>
+                </ul>
+            </div>
+
+            <div>
+                <ul>
+                    <li>Yo como programador</li>
+                    <li>Habilidades</li>
+                    <li>Portafolio</li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+</footer> -->
 </html>
