Actualización de enlaces

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                     <a id="cont" href="#">Contacto</a>
                 </li>
                 <li>
-                    <a href="disenador.html">Yo como diseñador industrial</a>
+                    <a href="https://www.behance.net/francisestupi">Yo como diseñador industrial</a>
                 </li>
                 <li>
-                    <a href="web.html">Yo como desarrollador web</a>
+                    <a href="https://github.com/festupinans">Yo como desarrollador web</a>
                 </li>
                 <li>
                     <a href="#">Acerca de mí</a>
@@ -232,7 +232,6 @@
 
     </div>
 </body>     
-
 <!-- <footer>
     <div class="footer">
         <div class="imgF">
