Agregar icono web

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     />
 
     <title>Francisco Estupiñan</title>
+    <link rel="icon" type="image/png" href="img/Icon.png" />
   </head>
   <body>
     <!-- NavBar Principal -->
