--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           </div>
           <div class="col-6">
             <ul>
-              <li><strong>Extrangero</strong></li>
+              <li><strong>Extranjero</strong></li>
               <li id="sin">Ingles</li>
               <li id="sin">B1</li>
             </ul>
