--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+  <canvas class="webgl"></canvas>
   <!-- NavBar Principal -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
@@ -289,6 +290,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+
+  <!-- Modulo js para threeJS   -->
+  <script type="module" src="./js/main.js"></script>
 </body>
 
 <footer>
